# ChangeLog for x11-themes/mythtv-themes
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/Attic/ChangeLog,v 1.56 2008/12/23 17:17:32 maekke Exp $

  23 Dec 2008; Markus Meier <maekke@gentoo.org>
  mythtv-themes-0.21_p16505.ebuild:
  x86 stable, bug #239341

  21 Dec 2008; nixnut <nixnut@gentoo.org> mythtv-themes-0.21_p16505.ebuild:
  Stable on ppc wrt bug 239341

  15 Dec 2008; Christoph Mende <angelos@gentoo.org>
  mythtv-themes-0.20.2_p14301.ebuild, mythtv-themes-0.21_p16505.ebuild,
  mythtv-themes-0.22_alpha18947.ebuild:
  QA: Removed ROOT usage from src_compile

  12 Dec 2008; Steve Dibb <beandog@gentoo.org>
  mythtv-themes-0.21_p16505.ebuild:
  amd64 stable, bug 239341

*mythtv-themes-0.22_alpha18947 (11 Nov 2008)

  11 Nov 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.22_alpha16840.ebuild,
  +mythtv-themes-0.22_alpha18947.ebuild:
  latest trunk themes

  28 Jul 2008; Carsten Lohrke <carlo@gentoo.org>
  mythtv-themes-0.20.2_p14301.ebuild:
  QA: Get rid of deprecated qt_min_version(). Quoting issues.

*mythtv-themes-0.22_alpha16840 (01 Apr 2008)

  01 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.22_alpha16504.ebuild,
  +mythtv-themes-0.22_alpha16840.ebuild:
  trunk build against qt4

*mythtv-themes-0.22_alpha16504 (11 Mar 2008)

  11 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.22_alpha16504.ebuild:
  add 0.22 trunk build for testing

*mythtv-themes-0.21_p16505 (11 Mar 2008)

  11 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.21_p16468.ebuild, +mythtv-themes-0.21_p16505.ebuild:
  fix text alignment in Recording Options

*mythtv-themes-0.21_p16468 (09 Mar 2008)

  09 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.21_beta16297.ebuild,
  -mythtv-themes-0.21_beta16317.ebuild,
  -mythtv-themes-0.21_beta16380.ebuild, +mythtv-themes-0.21_p16468.ebuild:
  0.21 release
