@@ -1,8 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/Attic/mythtv-themes-0.21_p16505.ebuild,v 1.7 2008/12/23 17:17:32 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/Attic/mythtv-themes-0.21_p16505.ebuild,v 1.8 2009/07/19 15:37:52 cardoe Exp $
 
-EAPI=1
+EAPI=2
 inherit qt3 mythtv
 
 DESCRIPTION="A collection of themes for the MythTV project."
@@ -13,10 +13,12 @@ IUSE=""
 DEPEND=">=x11-libs/qt-3.3:3
 	=media-tv/mythtv-${MY_PV}*"
 
-src_compile() {
-	./configure --prefix=/usr || die "configure died"
+src_configure() {
+	sh ./configure --prefix=/usr || die "configure died"
+}
 
-	eqmake3 myththemes.pro -o "Makefile" || die "eqmake3 failed"
+src_compile() {
+	eqmake3 myththemes.pro || die "eqmake3 failed"
 }
 
 src_install() {
