@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/mythtv-themes
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/Attic/ChangeLog,v 1.56 2008/12/23 17:17:32 maekke Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/Attic/ChangeLog,v 1.57 2009/07/19 15:37:52 cardoe Exp $
+
+  19 Jul 2009; Doug Goldstein <cardoe@gentoo.org>
+  mythtv-themes-0.21_p16505.ebuild, mythtv-themes-0.22_alpha18947.ebuild:
+  use new eclass bits
 
   23 Dec 2008; Markus Meier <maekke@gentoo.org>
   mythtv-themes-0.21_p16505.ebuild:
